<resources>
    <string name="app_name">effectiveMobile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sorry_something_went_wrong">Sorry something went wrong</string>
    <string name="sorry_connection_error">Sorry connection error</string>
    <string name="ticket">Авиабилеты</string>
    <string name="hotel">Отели</string>
    <string name="map">Короче</string>
    <string name="subscribe">Подписки</string>
    <string name="profile">Профиль</string>
    <string name="subcribe">Подписки</string>
</resources>