<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.effectivemobile.presentation.MainActivity">
    <item
        android:id="@+id/air_graph"
        android:title="@string/ticket"
        android:icon="@drawable/plane"
        />
    <item
        android:id="@+id/hotelsFragment2"
        android:title="@string/hotel"
        android:icon="@drawable/hotel" />
    <item
        android:id="@+id/locationFragment"
        android:title="@string/map"
        android:icon="@drawable/point_map"
        />
    <item
        android:id="@+id/subscribesFragment"
        android:title="@string/subcribe"
        android:icon="@drawable/notification"
        />
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/nite"
        />

</menu>